# OpenCL_nbodies

./: .gitmodules  CMakeLists.txt  build__debug.bat  build__release.bat  generate__debug.bat  generate__release.bat  main.cpp
cl_kernels/: add.ocl  simulation.ocl
src/: RNDGenerator.cpp  RNDGenerator.h  SimPoint.h  main.cpp  opengl_debug.h
